Fixing typo in page3.html

--- a/page3.html
+++ b/page3.html
@@ -77,7 +77,7 @@
     <p>Learn about html tags and styling using CSS3</p>
     <h1>Develop dynamic web pages using JavaScript.</h1>
     <p> Making the pages interactive </p>
-    <h1>We will try to build web applications using PHP and MySQL.</h1>
+    <h1>We will build web applications using PHP and MySQL.</h1>
     <p>might be useful for the senior project</p>
 
 </body>
